@@ -1,3 +1,8 @@
+2016-01-07  Maciej W. Rozycki  <macro@imgtec.com>
+
+	* mips-tdep.c (mips_breakpoint_from_pc): Rename local `status'
+	to `err' in the little-endian leg.
+
 2016-01-06  Yao Qi  <yao.qi@linaro.org>
 
 	* arch/arm-get-next-pcs.c (arm_get_next_pcs): Move it to some
